# amagold-jax

./: .gitignore  README.md  pyproject.toml
amagold_jax/: __init__.py  doublewell.py  samplers.py
amagold_jax/bnn/: __init__.py  convert_checkpoint.py  data.py  train.py
docs/: verification.md
figs/: doublewell_amagold.npz  doublewell_sghmc.npz
tests/: test_amagold.py
