[project]
name = "amagold-jax"
version = "0.1.0"
description = "JAX reimplementation of the AMAGOLD experiments (Zhang, Cooper, De Sa, AISTATS 2020)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "blackjax>=1.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
    "scipy>=1.10",
]
ref = [
    "torch>=2.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amagold_jax*"]
